--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-grid-carousel": "^1.0.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "short-id": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
