--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-grid-carousel": "^1.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
